# ticketpy

./: .gitignore  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  ticketpy.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  readme.doctree  ticketpy.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  ticketpy.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
tests/: test_ticketpy.py
tests/fixtures/: event.json  event_search.json
ticketpy/: __init__.py  client.py  model.py  query.py  ticketmaster.py  ticketpy.py
ticketpy/tests/: example-config.ini  test_ticketmaster.py  test_ticketpy.py
